--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,14 +1,74 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
+# For more about how to configure goreleaser, see:
+# https://goreleaser.com/customization/
 before:
   hooks:
     # you may remove this if you don't use vgo
     - env GO111MODULE=on go mod tidy
 builds:
-- env:
-  - CGO_ENABLED=0
+# You can have multiple builds defined as a yaml list
+-
+  # ID of the build.
+  # Defaults to the project name.
+  id: "trace"
+
+  # Path to main.go file or main package.
+  # Default is `.`.
+  main: ./cmd/trace/main.go
+
+  # Binary name.
+  # Can be a path (e.g. `bin/app`) to wrap the binary in a directory.
+  # Default is the name of the project directory.
+  binary: "kubectl-crossplane-trace"
+
+  # Custom environment variables to be set during the builds.
+  # Default is empty.
+  env:
+    - CGO_ENABLED=0
+
 archives:
-- id: 'trace'
+-
+  # ID of this archive.
+  # Defaults to `default`.
+  id: "crossplane-cli"
+
+  # Builds reference which build instances should be archived in this archive.
+  builds:
+  - trace
+
+  # Archive name template.
+  # Defaults:
+  # - if format is `tar.gz`, `gz` or `zip`:
+  #   - `{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}`
+  # - if format is `binary`:
+  #   - `{{ .Binary }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}`
+  # name_template: "{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}"
+
+  # Set to true, if you want all files in the archive to be in a single directory.
+  # If set to true and you extract the archive 'goreleaser_Linux_arm64.tar.gz',
+  # you get a folder 'goreleaser_Linux_arm64'.
+  # If set to false, all files are extracted separately.
+  # You can also set it to a custom folder name (templating is supported).
+  # Default is false.
+  # wrap_in_directory: true
+
+  # Archive format. Valid options are `tar.gz`, `gz`, `zip` and `binary`.
+  # If format is `binary`, no archives are created and the binaries are instead
+  # uploaded directly.
+  # Default is `tar.gz`.
+  format: "tar.gz"
+
+  # Can be used to change the archive formats for specific GOOSs.
+  # Most common use case is to archive as zip on Windows.
+  # Default is empty.
+  format_overrides:
+    - goos: windows
+      format: zip
+
+  # Additional files/globs you want to add to the archive.
+  # Defaults are any files matching `LICENCE*`, `LICENSE*`,
+  # `README*` and `CHANGELOG*` (case-insensitive).
+  files:
+    - 'NONE'
 checksum:
   name_template: 'checksums.txt'
 snapshot:
