--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -96,14 +96,16 @@ archives:
 
 checksum:
   name_template: 'checksums.txt'
+
 snapshot:
   name_template: "{{ .Tag }}-next"
+
 changelog:
   sort: asc
   filters:
     exclude:
-    - '^docs:'
     - '^test:'
+    - '^Merge pull request'
 
 release:
   # If set to true, will not auto-publish the release.
