krew: add wrapper and update packaging for use by krew
Signed-off-by: Marques Johansson <marques@upbound.io>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -93,6 +93,7 @@ archives:
   # that functionality to bundle our bash scripts into the archive.
   files:
     - bin/kubectl-crossplane-*
+    - LICENSE
 
 checksum:
   name_template: 'checksums.txt'
