update patterns for install/uninstall to also include the root crossplane command
Signed-off-by: Jared Watts <jbw976@gmail.com>

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -102,7 +102,7 @@ archives:
   # goreleaser will bundle other things into our archive for us, so we're using
   # that functionality to bundle our bash scripts into the archive.
   files:
-    - bin/kubectl-crossplane-*
+    - bin/kubectl-crossplane*
     - LICENSE
 
 checksum:
